# Ascend-OS

./: .gitignore  ARCHITECTURE.md  README.md  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx
constants/: achievements.ts  known-apps.ts  languages.ts  levels.ts  reflection-prompts.ts  self-identity.ts  themes.ts  xp-values.ts
data/: achievements.json  levels.json  quests.json  starter-data.json
database/: schema.prisma  seed.ts
electron/: main.ts  preload.ts  tray.ts
hooks/: useActivityWatch.ts  useAnalytics.ts  useAppRules.ts  useAppRulesRows.ts  useContextSwitches.ts  useDetectedApps.ts  useDistractionAnalytics.ts  useDistractions.ts  useLiveWindowSnapshot.ts  useNativeTracker.ts  useNotifications.ts  useProjectActivity.ts  useProjectNotes.ts  useProjectResources.ts  useProjectTasks.ts  useProjects.ts  useRecents.ts  useReflection.ts  useReports.ts  useSessions.ts  useSettings.ts  useShell.ts  useStreak.ts  useStudyLibrary.ts  useTimer.ts  useXP.ts
lib/: achievement-engine.ts  activitywatch.ts  analytics-engine.ts  app-rules-context.tsx  app-rules.ts  chart-capture.ts  charts.ts  context-switch-context.tsx  context-switch-factory.ts  detected-apps.ts  distraction-context.tsx  distraction-factory.ts  export-engine.ts  level-system.ts  link-preview.ts  markdown.ts  quest-engine.ts  (+14 more)
src-tauri/: Cargo.toml  README_MERGE_NOTE.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tracker.rs
(+148 files in other folders)
